Added 2016 Day 17 (#20)
Moved to JDK 23 to use preview [JEP 480 - Structured Concurrency](https://openjdk.org/jeps/480)